# mock-sat

./: .gitignore  CMakeLists.txt  QSET Application Questions.docx  README.md  main.py  main_gs.py  qsat-exec-application-form.docx  receiver.cpp  requirements.txt  transmitter.cpp
ADCS_Prototyping/: BNO055_TEST.py  FIT0441_TEST.py  PI_TEST.py  README.md
STL_files/satellite_frame/: Base Plate PC104.STL
adcs-prototyping/: MAX11300Hex.h  MAX113XX_Pixi.cpp  MAX113XX_Pixi.h  max-trq.py
docs/: DevInWSL.md  HowToBuildCode.md  Subsystems.md  rtos-taskguide.md
firmware/: CMakeLists.txt  RTOS-tutorial.cpp  base_station.cpp  base_station.py  moc_sat.cpp  send.cpp  serial_read_image_port.py  serial_write_image.py  test.py
firmware/test/: CMakeLists.txt  hello_world.cpp  test_send_image_from_sd.cpp  test_transceiver_receive.cpp
groundstation/: gui.py
hardware/mock-sat-1U/: bracket-rpi4.par  rack.par  rail.par  shelf-blank.par  shelf-nucleo.par  shelf-protoboard.par  shelf-rpi.par
hardware/mock-sat-chassis/: Siderib-U.SLDPRT  Siderib-U.STL  baseplate 2.SLDPRT
src/: .gitignore  CMakeLists.txt  README.md  satellite.py
src/firmware/: CMakeLists.txt  README.md  RTOS-tutorial  base_station.cpp  client.cpp  moc_sat.cpp  receiver.cpp  server.cpp  transceiver.cpp  transmitter.cpp
src/firmware/cpp/: receive.cpp  send.cpp
src/firmware/examples/: CMakeLists.txt  i2c-slave.cpp  radiohead-nrf24-client.cpp  radiohead-nrf24-server.cpp  receive.py  send.py  transceiver-transmit.cpp
src/obc/: obc.py  (+1 more)
tasks/: radio_task.py  template_task.py  test_task.py
test/: CMakeLists.txt
(+79 files in other folders)
